Default VSCode settings Don't lint dist Explicit Prettier rules Fix lint/style errors More specific npm scripts README outline

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
+    "arrowParens": "avoid",
+    "bracketSpacing": true,
+    "htmlWhitespaceSensitivity": "css",
+    "quoteProps": "as-needed",
     "singleQuote": false,
-    "semi": true
+    "semi": true,
+    "trailingComma": "none"
 }
