--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -3,6 +3,7 @@
         "browser": true
     },
     "parserOptions": {
-        "ecmaVersion": 2017
+        "ecmaVersion": 2017,
+        "sourceType": "module"
     }
 }
