Add jest for testing Example test (add util function as example) ESLint configs for jest

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,9 +5,11 @@
         "prettier"
     ],
     "rules": {
+        "jest/no-disabled-tests": "warn",
         "prettier/prettier": "error"
     },
     "plugins": [
-        "prettier"
+        "prettier",
+        "jest"
     ]
 }
