--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:prod": "webpack --config webpack/webpack.prod.js && npm run copyStatic",
     "copyStatic": "copyfiles -u 2 src/static/**/* dist",
     "start": "webpack-dev-server --config webpack/webpack.dev.js --open",
+    "test": "jest",
     "lint": "eslint --ext .js .",
     "lint:fix": "npm run lint -- --fix"
   },
@@ -26,7 +27,9 @@
     "copyfiles": "^2.2.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^3.0.2",
