Fix up ESLint in VSCode

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,6 @@
         "eslint:recommended"
     ],
     "rules": {
-        "jest/no-disabled-tests": "warn"
-    },
-    "plugins": [
-        "jest"
-    ]
+        "quotes": ["error", "double"]
+    }
 }
