--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,12 +1,11 @@
 {
     "compilerOptions": {
         "outDir": "./dist/",
-        "module": "ES6",
-        "noImplicitAny": true,
+        "target": "es6",
+        "sourceMap": true,
         "allowJs": true,
         "skipLibCheck": true,
-        "sourceMap": true,
-        "strict": true
+        "strict": true,
     },
     "exclude": ["test"]
 }
