--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "package-name",
   "version": "1.0.0",
-  "description": "description",
+  "author": "author",
+  "license": "BSD-2-Clause",
   "engines": {
     "node": "^12.17.0",
     "npm": "^6.14.4"
@@ -18,27 +19,25 @@
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix"
   },
-  "author": "author",
-  "license": "BSD-2-Clause",
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "@types/jest": "^26.0.10",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "babel-loader": "^8.1.0",
-    "copyfiles": "^2.3.0",
-    "eslint": "^7.7.0",
-    "eslint-plugin-jest": "^23.20.0",
-    "jest": "^26.4.2",
+    "@babel/core": "~7.11.6",
+    "@babel/preset-env": "~7.11.5",
+    "@types/jest": "~26.0.14",
+    "@typescript-eslint/eslint-plugin": "~4.4.0",
+    "@typescript-eslint/parser": "~4.4.0",
+    "babel-loader": "~8.1.0",
+    "copyfiles": "^2.4.0",
+    "eslint": "~7.10.0",
+    "eslint-plugin-jest": "~24.1.0",
+    "jest": "~26.5.2",
     "rimraf": "^3.0.2",
-    "terser-webpack-plugin": "^4.1.0",
-    "ts-jest": "^26.3.0",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.3"
+    "terser-webpack-plugin": "~4.2.3",
+    "ts-jest": "~26.4.1",
+    "ts-loader": "~8.0.4",
+    "typescript": "4.0.3",
+    "webpack": "~4.44.2",
+    "webpack-cli": "~3.3.12",
+    "webpack-dev-server": "~3.11.0",
+    "webpack-merge": "~5.2.0"
   }
 }
